--- a/read-content-from-database/news/templates/base.html
+++ b/read-content-from-database/news/templates/base.html
@@ -6,9 +6,7 @@
 </head>
 <body>
 	<div>
-		{% block header %}
-		    <p> this is header </p>
-		{% endblock %}
+		{% block header %}{% endblock %}
 	</div>
 	<div>{% block content %}{% endblock %}</div>
 	<div id="footer">
