--- a/read-content-from-database/news/templates/index.html
+++ b/read-content-from-database/news/templates/index.html
@@ -1,13 +1,13 @@
 {% extends "base.html" %}
 
 {% block header %}
-    <h1> 首页 </h1>
+    <h1> 文章列页 </h1>
 {% endblock %}
 
 {% block content %}
     <ul>
-      {% for title in title_list %}
-	  <li>{{ title }} </li>
+      {% for file in files %}
+	  <li><a href="{{ url_for('file', file_id=file.id) }}" target="_blank">{{ file.title }}</a> </li>
 	  {% endfor %}
 	</ul>
 {% endblock %}
